--- a/style.css
+++ b/style.css
@@ -23,11 +23,25 @@ body {
     border-radius: 10px;
 }
 
+.image__box {
+    width: auto;
+    height: min-content;
+    position: relative;
+}
+
 .card__image {
     width: 100%;
     border-radius: 10px;
     margin-bottom: 22px;
+    background: none;
 }
+
+
+.image__box:hover { 
+    cursor: pointer;
+    opacity: 0.5;
+}
+
 
 .card__title {
     width: 100%;
@@ -36,6 +50,11 @@ body {
     color: #ffffff;
     margin-bottom: 12px;
 
+}
+
+.card__title:hover{
+    cursor: pointer;
+    color: #00FFF8;
 }
 
 .card__content {
@@ -103,4 +122,9 @@ body {
 
 .card__author p span {
     color: #ffffff;
+}
+
+.card__author p span:hover{
+    cursor: pointer;
+    color: #00FFF8;
 }
