--- a/style.css
+++ b/style.css
@@ -27,6 +27,14 @@ body {
     width: auto;
     height: min-content;
     position: relative;
+    
+}
+
+.view__icon {
+    position: absolute;
+    top:40%;
+    right: 43%;
+    display: none;
 }
 
 .card__image {
@@ -36,11 +44,24 @@ body {
     background: none;
 }
 
-
-.image__box:hover { 
-    cursor: pointer;
+.image__background {
+    width: 100%;
+    height: 330px;
+    background-color: #00FFF8;
+    border-radius: 10px;
     opacity: 0.5;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
 }
+
+.image__box:hover .image__background, .image__box:hover .view__icon {
+    display: block;
+    cursor: pointer;
+}
+
+
 
 
 .card__title {
